...
    <string name="config_fragment_label">Settings</string>
    <string name="navigate_config">Navigate to Configuration</string>
    <string name="okhttp">Perform OkHttp Request</string>
    <string name="graphql">Perform Apollo GraphQL Request</string>
    <string name="compat_multiline_txt">Text Label on AppCompatTextView\nSecond Line on same Text Label</string>
    <string name="log_msg">Log Message</string>
    <string name="app_exit">Force App Exit</string>
    <string name="navigate_second">Compose</string>
    <string name="navigate_to_web_view">WebView</string>
    <string name="navigate_to_xml_view">XML</string>
    <string name="navigate_to_modal_bottom_sheet" translatable="false">Dialog &amp; Modals</string>
    <string name="modal_bottom_sheet_fragment_label" translatable="false">Show Dialog and Modals</string>
    <string name="previous">Navigate Back</string>
...
    <string name="start_sdk">Start SDK</string>
    <string name="sdk_not_started">SDK not started - Click on Start SDK Button</string>
    <string name="sdk_status">SDK Status</string>
    <string name="session_management">Session Management</string>
    <string name="session_strategy">Session Strategy</string>
    <string name="session_id">Session ID</string>
    <string name="exit_reason">Exit Reason</string>
    <string name="text_copy">Copy</string>
    <string name="copy_url">Copy URL</string>
    <string name="new_session">New Session</string>
    <string name="generate_device_code">Generate Device Code</string>
    <string name="network_testing">Network Testing</string>
    <string name="navigation">Navigation to other screens</string>
...
