...
    val label: String,
    val screenName: String,
    val icon: ImageVector,
) {
    HOME("Home", "home_tab", Icons.Default.Home),
    SDK_APIS("SDK APIs", "sdk_apis_tab", Icons.Default.PlayArrow),
    APP_TERMINATIONS("App Exits", "app_exits_tab", Icons.AutoMirrored.Filled.ExitToApp),
    STRESS_TESTS("Stress", "stress_tests_tab", Icons.Default.Warning),
    NAVIGATE("Navigate", "navigate_tab", Icons.Default.Menu),
    SETTINGS("Settings", "settings_tab", Icons.Default.Settings),
}

@OptIn(ExperimentalMaterial3Api::class)
...
